Update build.gradle
Added a task called startSnappyIngestionPerf that we can use for Ingestion perf test. And, now startLogAggregation just uses the SnappySQLLogAggregator.